syntax = "proto3";

option csharp_namespace = "Knowledge.Grpc.Reasoning";

package Reasoning;

service ReasoningService {
    rpc Reason (ReasoningRequest) returns (ReasoningComposition) {}
}

message ReasoningRequest {
    repeated string region_names = 1;
}

message ReasoningComposition {
    repeated RegionReasoningComposition region_compositions = 1;
}

message RegionReasoningComposition {
    string region_name = 1;
    bool action_required = 2;
    AgentAction action = 3;
}

message AgentAction {
    int32 scale = 1;
}
